docs: remove extra comments

--- a/hypotheses_report.ipynb
+++ b/hypotheses_report.ipynb
@@ -274,13 +274,10 @@
     "            images.append(image)\n",
     "    return images\n",
     "\n",
-    "# Load images\n",
     "cardboard_images = load_images_from_folder(cardboard_path)\n",
     "\n",
-    "# Create an instance of the AmountOfParallelLines feature extractor\n",
     "parallel_lines_feature_extractor = feat.AmountOfParallelLines()\n",
     "\n",
-    "# Calculate features for cardboard images\n",
     "cardboard_features = [parallel_lines_feature_extractor(img) for img in cardboard_images]\n",
     "\n",
     "other_features = []\n",
@@ -303,18 +300,15 @@
     "other_low = len(other_features) - other_high\n",
     "chi2_stat, chi2_pvalue, _, _ = chi2_contingency([[cardboard_high, cardboard_low], [other_high, other_low]])\n",
     "\n",
-    "# Collect results\n",
     "results = {\n",
     "    \"t-test\": {\"statistic\": t_stat, \"p-value\": t_pvalue},\n",
     "    \"ANOVA\": {\"statistic\": anova_stat, \"p-value\": anova_pvalue},\n",
     "    \"Chi-square\": {\"statistic\": chi2_stat, \"p-value\": chi2_pvalue},\n",
     "}\n",
     "\n",
-    "# Print results\n",
     "for test, result in results.items():\n",
     "    print(f\"{test}: Statistic = {result['statistic']}, p-value = {result['p-value']}\")\n",
     "\n",
-    "# Final hypothesis check\n",
     "alpha = 0.05\n",
     "hypothesis_results = {test: result['p-value'] < alpha for test, result in results.items()}\n",
     "\n",
@@ -527,7 +521,7 @@
     "\n",
     "for class_name in classes:\n",
     "    class_path = os.path.join(path + \"/garbage-dataset/\", class_name)\n",
-    "    image_paths = glob.glob(os.path.join(class_path, \"*.jpg\"))  # Предположим, что файлы изображений имеют расширение .jpg\n",
+    "    image_paths = glob.glob(os.path.join(class_path, \"*.jpg\")) \n",
     "\n",
     "    for image_path in image_paths:\n",
     "        image = cv2.imread(image_path)\n",
@@ -539,7 +533,7 @@
     "        else:\n",
     "            transparency_data['other'].append(transparency)\n",
     "\n",
-    "# 1. Тест Манна-Уитни (для пластика/стекла против остальных)\n",
+    "# 1. Тест Манна-Уитни \n",
     "u_statistic, p_value_mw = mannwhitneyu(transparency_data['plastic'] + transparency_data['glass'], transparency_data['other'])\n",
     "print(f\"Mann-Whitney U test: Statistic = {u_statistic}, p-value = {p_value_mw}\")\n",
     "\n",
@@ -554,7 +548,6 @@
     "kruskal_stat, p_value_kruskal = kruskal(transparency_data['plastic'], transparency_data['glass'], transparency_data['other'])\n",
     "print(f\"Kruskal-Wallis test: Statistic = {kruskal_stat}, p-value = {p_value_kruskal}\")\n",
     "\n",
-    "# Интерпретация гипотезы\n",
     "alpha = 0.05\n",
     "if p_value_mw < alpha and p_value_spearman < alpha and p_value_kruskal < alpha:\n",
     "    print(\"Итог: гипотеза подтверждена: пластик и стекло имеют больше прозрачных областей.\")\n",
@@ -612,11 +605,11 @@
     "metal_reflections = collect_reflections([metal_path])\n",
     "other_reflections = collect_reflections([os.path.join(path + \"/garbage-dataset\", cls) for cls in other_classes])\n",
     "\n",
-    "# 1. Тест Манна-Уитни (Mann-Whitney U Test)\n",
+    "# 1. Тест Манна-Уитни \n",
     "u_stat, p_value_mwu = mannwhitneyu(metal_reflections, other_reflections, alternative='two-sided')\n",
     "print(f'Mann-Whitney U Test p-value: {p_value_mwu}')\n",
     "\n",
-    "# 2. Корреляция Спирмена (Spearman correlation) а\n",
+    "# 2. Корреляция Спирмена \n",
     "all_reflections = metal_reflections + other_reflections\n",
     "class_labels = ['metal'] * len(metal_reflections) + ['other'] * len(other_reflections)\n",
     "\n",
@@ -700,7 +693,6 @@
     "shininess_values = np.concatenate([metal_plastic_shininess, other_shininess])\n",
     "labels = np.concatenate([np.ones(len(metal_plastic_shininess)), np.zeros(len(other_shininess))])\n",
     "\n",
-    "# Вычисляем корреляцию между яркостью и классами\n",
     "correlation, p_val_pierson = stats.pearsonr(shininess_values, labels)\n",
     "\n",
     "# 3. Тест Левене на равенство дисперсий\n",
@@ -710,7 +702,6 @@
     "print(\"Pearson correlation = \", correlation)\n",
     "print(\"Levene's test: p-value =\", p_value_levene)\n",
     "\n",
-    "# Интерпретация гипотезы\n",
     "if p_value_metal_plastic_other < 0.05 and p_val_pierson < 0.05 and p_value_levene < 0.05:\n",
     "    print(\"\\nИтог: гипотеза подтверждена: металл и пластик имеют яркие участки\")\n",
     "else:\n",
@@ -779,13 +770,11 @@
     "mean_anisotropies = [np.mean(anisotropy_data[class_name]) for class_name in classes]\n",
     "spearman_corr, spearman_pvalue = spearmanr(range(len(classes)), mean_anisotropies)\n",
     "\n",
-    "# Вывод результатов\n",
     "print(\"Результаты тестов:\")\n",
     "print(f\"Mann-Whitney U Test: p-value = {mannwhitney_result.pvalue}\")\n",
     "print(f\"Kruskal-Wallis test: p-value = {kruskal_result.pvalue}\")\n",
     "print(f\"Spearman correlation: Correlation = {spearman_corr}, p-value = {spearman_pvalue}\")\n",
     "\n",
-    "# Итог\n",
     "if mannwhitney_result.pvalue < 0.05 and kruskal_result.pvalue < 0.05 and spearman_pvalue < 0.05:\n",
     "    print(\"Итог: гипотеза подтверждена: текстурная анизотропия металла выше.\")\n",
     "else:\n",
@@ -827,7 +816,6 @@
    ],
    "source": [
     "def get_aspect_ratios(class_name):\n",
-    "    \"\"\"Get aspect ratios for all images in a class.\"\"\"\n",
     "    class_path = os.path.join(base_path, class_name)\n",
     "    aspect_ratios = []\n",
     "    aspect_ratio_calculator = feat.AmountOfAspectRatio()\n",
@@ -868,7 +856,6 @@
     "print(f\"Levene's test: p-value = {levene_result.pvalue}\")\n",
     "print(f\"Spearman correlation: Correlation = {spearman_result.correlation}, p-value = {spearman_result.pvalue}\")\n",
     "\n",
-    "# Проверка гипотезы\n",
     "alpha = 0.05\n",
     "if (mann_whitney_result.pvalue < alpha) and (levene_result.pvalue < alpha) and (spearman_result.pvalue < alpha):\n",
     "    print(\"Итог: гипотеза подтверждена: металл и стекло имеют более постоянные размеры и пропорции.\")\n",
@@ -1017,7 +1004,7 @@
     "if t_p_value < 0.05 and a_p_value < 0.05 and u_p_value < 0.05:\n",
     "    print(\"Итог: гипотеза подтверждена: одежду можно отличить от других классов по наличию волнистых краёв или складок.\")\n",
     "else:\n",
-    "    print(\"Итог: гипотеза не подтверждена: различия между классами недостаточно статистически значимы.\")\n"
+    "    print(\"Итог: гипотеза не подтверждена: различия между классами недостаточно статистически значимы.\")"
    ]
   },
   {
