--- a/hypotheses_report.ipynb
+++ b/hypotheses_report.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/pasha/dump5/image_classification/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/pasha/dump7/image_classification/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -40,6 +40,29 @@
     "\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from scipy.stats import mannwhitneyu, spearmanr, kruskal, levene, ttest_ind, pearsonr, chi2_contingency, f_oneway"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Загрузка всех изображений из папки "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_images_from_folder(folder):\n",
+    "    images = []\n",
+    "    for filename in os.listdir(folder):\n",
+    "        filepath = os.path.join(folder, filename)\n",
+    "        image = cv2.imread(filepath)\n",
+    "        if image is not None: \n",
+    "            images.append(image)\n",
+    "    return images"
    ]
   },
   {
@@ -79,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -96,15 +119,6 @@
    "source": [
     "cardboard_path = os.path.join(path + \"/garbage-dataset\", \"cardboard\")\n",
     "other_paths = [os.path.join(path + \"/garbage-dataset\", cls) for cls in classes if cls != \"cardboard\"]\n",
-    "\n",
-    "def load_images_from_folder(folder):\n",
-    "    images = []\n",
-    "    for filename in os.listdir(folder):\n",
-    "        filepath = os.path.join(folder, filename)\n",
-    "        image = cv2.imread(filepath)\n",
-    "        if image is not None: \n",
-    "            images.append(image)\n",
-    "    return images\n",
     "\n",
     "yellow_feature = feat.AmountOfYellow()\n",
     "\n",
@@ -163,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -180,15 +194,6 @@
    "source": [
     "metal_path = os.path.join(path + \"/garbage-dataset\", \"metal\")\n",
     "other_paths = [os.path.join(path + \"/garbage-dataset\", cls) for cls in classes if cls != \"metal\"]\n",
-    "\n",
-    "def load_images_from_folder(folder):\n",
-    "    images = []\n",
-    "    for filename in os.listdir(folder):\n",
-    "        filepath = os.path.join(folder, filename)\n",
-    "        image = cv2.imread(filepath)\n",
-    "        if image is not None:\n",
-    "            images.append(image)\n",
-    "    return images\n",
     "\n",
     "silver_feature = feat.AmountOfSilver()\n",
     "\n",
@@ -247,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -264,15 +269,6 @@
    "source": [
     "cardboard_path = os.path.join(path + \"/garbage-dataset\", \"cardboard\")\n",
     "other_paths = [os.path.join(path + \"/garbage-dataset\", cls) for cls in classes if cls != \"cardboard\"]\n",
-    "\n",
-    "def load_images_from_folder(folder):\n",
-    "    images = []\n",
-    "    for filename in os.listdir(folder):\n",
-    "        filepath = os.path.join(folder, filename)\n",
-    "        image = cv2.imread(filepath)\n",
-    "        if image is not None:\n",
-    "            images.append(image)\n",
-    "    return images\n",
     "\n",
     "cardboard_images = load_images_from_folder(cardboard_path)\n",
     "\n",
@@ -411,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -428,15 +424,6 @@
    "source": [
     "metal_path = os.path.join(path + \"/garbage-dataset\", \"metal\")\n",
     "other_paths = [os.path.join(path + \"/garbage-dataset\", cls) for cls in classes if cls != \"metal\"]\n",
-    "\n",
-    "def load_images_from_folder(folder):\n",
-    "    images = []\n",
-    "    for filename in os.listdir(folder):\n",
-    "        filepath = os.path.join(folder, filename)\n",
-    "        image = cv2.imread(filepath)\n",
-    "        if image is not None:\n",
-    "            images.append(image)\n",
-    "    return images\n",
     "\n",
     "reflection_calculator = feat.AmountOfReflections()\n",
     "\n",
@@ -535,17 +522,18 @@
     "\n",
     "# 1. Тест Манна-Уитни \n",
     "u_statistic, p_value_mw = mannwhitneyu(transparency_data['plastic'] + transparency_data['glass'], transparency_data['other'])\n",
-    "print(f\"Mann-Whitney U test: Statistic = {u_statistic}, p-value = {p_value_mw}\")\n",
     "\n",
     "# 2. Коэффициент корреляции Спирмена\n",
     "all_transparency = transparency_data['plastic'] + transparency_data['glass'] + transparency_data['other']\n",
     "labels = ['plastic_glass'] * (len(transparency_data['plastic']) + len(transparency_data['glass'])) + ['other'] * len(transparency_data['other'])\n",
     "\n",
     "spearman_corr, p_value_spearman = spearmanr(all_transparency, [1 if label == 'plastic_glass' else 0 for label in labels])\n",
-    "print(f\"Spearman correlation: Correlation = {spearman_corr}, p-value = {p_value_spearman}\")\n",
     "\n",
     "# 3. Тест Крускала-Уоллиса\n",
     "kruskal_stat, p_value_kruskal = kruskal(transparency_data['plastic'], transparency_data['glass'], transparency_data['other'])\n",
+    "\n",
+    "print(f\"Mann-Whitney U test: Statistic = {u_statistic}, p-value = {p_value_mw}\")\n",
+    "print(f\"Spearman correlation: Correlation = {spearman_corr}, p-value = {p_value_spearman}\")\n",
     "print(f\"Kruskal-Wallis test: Statistic = {kruskal_stat}, p-value = {p_value_kruskal}\")\n",
     "\n",
     "alpha = 0.05\n",
@@ -607,14 +595,12 @@
     "\n",
     "# 1. Тест Манна-Уитни \n",
     "u_stat, p_value_mwu = mannwhitneyu(metal_reflections, other_reflections, alternative='two-sided')\n",
-    "print(f'Mann-Whitney U Test p-value: {p_value_mwu}')\n",
     "\n",
     "# 2. Корреляция Спирмена \n",
     "all_reflections = metal_reflections + other_reflections\n",
     "class_labels = ['metal'] * len(metal_reflections) + ['other'] * len(other_reflections)\n",
     "\n",
     "spearman_corr, p_value_spearman = spearmanr(all_reflections, [0]*len(metal_reflections) + [1]*len(other_reflections))\n",
-    "print(f'Spearman correlation p-value: {p_value_spearman}')\n",
     "\n",
     "# 3. Дисперсионный анализ (ANOVA) \n",
     "all_reflections_per_class = [\n",
@@ -623,6 +609,9 @@
     "] \n",
     "\n",
     "anova_stat, p_value_anova = f_oneway(*all_reflections_per_class)\n",
+    "\n",
+    "print(f'Mann-Whitney U Test p-value: {p_value_mwu}')\n",
+    "print(f'Spearman correlation p-value: {p_value_spearman}')\n",
     "print(f'ANOVA p-value: {p_value_anova}')\n",
     "\n",
     "if p_value_mwu < 0.05 and p_value_spearman < 0.05 and p_value_anova < 0.05:\n",
@@ -847,7 +836,7 @@
     "levene_result = levene(glass_metal_ratios, other_ratios)\n",
     "\n",
     "# 3. Корреляция Спирмена\n",
-    "labels = [1] * len(glass_metal_ratios) + [0] * len(other_ratios)  # 1 для стекла и металла, 0 для остальных\n",
+    "labels = [1] * len(glass_metal_ratios) + [0] * len(other_ratios) \n",
     "all_ratios = glass_metal_ratios + other_ratios\n",
     "spearman_result = spearmanr(labels, all_ratios)\n",
     "\n",
@@ -880,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -896,15 +885,6 @@
    "source": [
     "paper_path = os.path.join(path + \"/garbage-dataset\", \"paper\")\n",
     "other_paths = [os.path.join(path + \"/garbage-dataset\", cls) for cls in classes if cls != \"paper\"]\n",
-    "\n",
-    "def load_images_from_folder(folder):\n",
-    "    images = []\n",
-    "    for filename in os.listdir(folder):\n",
-    "        filepath = os.path.join(folder, filename)\n",
-    "        image = cv2.imread(filepath)\n",
-    "        if image is not None: \n",
-    "            images.append(image)\n",
-    "    return images\n",
     "\n",
     "paper_images = load_images_from_folder(paper_path)\n",
     "paper_white_amounts = [feat.AmountOfWhiteness()(img) for img in paper_images]\n",
