refactor: remove repeatable classes

--- a/hypotheses_report.ipynb
+++ b/hypotheses_report.ipynb
@@ -578,7 +578,7 @@
    ],
    "source": [
     "metal_path = os.path.join(path + \"/garbage-dataset\", \"metal\")\n",
-    "other_classes = ['trash', 'glass', 'battery', 'clothes', 'plastic', 'cardboard', 'paper', 'biological', 'shoes']\n",
+    "other_classes = [cl for cl in classes if cl != \"metal\"]\n",
     "\n",
     "def collect_reflections(class_dirs):\n",
     "    reflections = []\n",
@@ -732,9 +732,8 @@
     }
    ],
    "source": [
-    "classes = ['trash', 'glass', 'battery', 'clothes', 'metal', 'plastic', 'cardboard', 'paper', 'biological', 'shoes']\n",
-    "\n",
     "anisotropy_data = {}\n",
+    "\n",
     "for class_name in classes:\n",
     "    class_path = os.path.join(path + \"/garbage-dataset/\", class_name)\n",
     "    anisotropy_data[class_name] = []\n",
@@ -950,7 +949,7 @@
    ],
    "source": [
     "clothes_path = path + \"/garbage-dataset/clothes\"\n",
-    "other_classes = ['trash', 'glass', 'battery', 'metal', 'plastic', 'cardboard', 'paper', 'biological', 'shoes']\n",
+    "other_classes = [cl for cl in classes if cl != \"clothes\"]\n",
     "data = {\"clothes\": [], \"others\": []}\n",
     "\n",
     "for img_name in os.listdir(clothes_path):\n",
