--- a/classifier_test.ipynb
+++ b/classifier_test.ipynb
@@ -72,20 +72,23 @@
     "\n",
     "\n",
     "def get_features(img):\n",
-    "    return (AmountOfYellow()(img),\n",
-    "            AmountOfSilver()(img),\n",
-    "            AmountOfParallelLines()(img),\n",
-    "            AmountOfCylinders()(img),\n",
-    "            AmountOfReflections()(img),\n",
-    "            AmountOfTransparency()(img),\n",
-    "            AmountOfTextureSmoothness()(img),\n",
-    "            AmountOfTextureShininess()(img),\n",
-    "            AmountOfSurfaceAnisotropy()(img),\n",
-    "            AmountOfAspectRatio()(img),\n",
-    "            AmountOfWhiteness()(img),\n",
-    "            AmountOfLineCurvature()(img),)\n",
+    "    return (\n",
+    "        AmountOfYellow()(img),\n",
+    "        AmountOfSilver()(img),\n",
+    "        AmountOfParallelLines()(img),\n",
+    "        AmountOfCylinders()(img),\n",
+    "        AmountOfReflections()(img),\n",
+    "        AmountOfTransparency()(img),\n",
+    "        AmountOfTextureSmoothness()(img),\n",
+    "        AmountOfTextureShininess()(img),\n",
+    "        AmountOfSurfaceAnisotropy()(img),\n",
+    "        AmountOfAspectRatio()(img),\n",
+    "        AmountOfWhiteness()(img),\n",
+    "        AmountOfLineCurvature()(img),\n",
+    "    )\n",
     "\n",
-    "test_images = [] \n",
+    "\n",
+    "test_images = []\n",
     "features = []\n",
     "labels = []\n",
     "for class_name in classes:\n",
@@ -93,19 +96,22 @@
     "    image_names = os.listdir(class_path)\n",
     "\n",
     "    # Split the images into training and testing sets (80% train, 20% test)\n",
-    "    train_images, test_images_class = train_test_split(image_names, test_size=0.2, random_state=42)\n",
+    "    train_images, test_images_class = train_test_split(\n",
+    "        image_names, test_size=0.2, random_state=42\n",
+    "    )\n",
     "\n",
     "    # Collect test images for manual testing\n",
     "    for image_name in test_images_class:\n",
     "        test_images.append(os.path.join(class_path, image_name))\n",
     "\n",
-    "classifier = joblib.load('random_forest_classifier.pkl')\n",
+    "classifier = joblib.load(\"random_forest_classifier.pkl\")\n",
+    "\n",
     "\n",
     "def classify_image(image_path):\n",
     "    image = cv2.imread(image_path)\n",
     "    if image is not None:\n",
     "        features_list = get_features(image)\n",
-    "        feature = np.array([features_list])  \n",
+    "        feature = np.array([features_list])\n",
     "        prediction = classifier.predict(feature)\n",
     "        return prediction[0]\n",
     "    else:\n",
@@ -254,21 +260,26 @@
     "    correct_count = 0\n",
     "\n",
     "    for test_image in test_images:\n",
-    "        if target_class_name in test_image:  \n",
+    "        if target_class_name in test_image:\n",
     "            total_count += 1  # Increment total count for the target class\n",
-    "            predicted_class = classify_image(test_image)  \n",
-    "            predictions[predicted_class] += 1 \n",
+    "            predicted_class = classify_image(test_image)\n",
+    "            predictions[predicted_class] += 1\n",
     "            if predicted_class == target_class_name:\n",
-    "                correct_count += 1  # Increment correct count if prediction matches target class\n",
+    "                correct_count += (\n",
+    "                    1  # Increment correct count if prediction matches target class\n",
+    "                )\n",
     "\n",
-    "    return dict(predictions), total_count, correct_count  \n",
+    "    return dict(predictions), total_count, correct_count\n",
+    "\n",
     "\n",
     "for class_name in classes:\n",
     "    results, total_count, correct_count = test_classify(test_images, class_name)\n",
     "    print(f\"Predicted class counts for test images containing '{class_name}':\")\n",
     "    for predicted_class, count in results.items():\n",
     "        print(f\"Class: {predicted_class}, Count: {count}\")\n",
-    "    print(f\"Correctly guessed {correct_count} out of {total_count} for class '{class_name}'.\")"
+    "    print(\n",
+    "        f\"Correctly guessed {correct_count} out of {total_count} for class '{class_name}'.\"\n",
+    "    )"
    ]
   }
  ],
